syntax = "proto3";

option csharp_namespace = "GrpcServer";

service Customer {
	rpc GetCustomer (CustomerLookupModel) returns (CustomerModel);
	rpc GetAll (NewCustomerRequest) returns (stream CustomerModel);
	rpc AddCustomer (stream CustomerModel) returns (AddCustomerResponse);
}

message AddCustomerResponse{
	int32 count = 1;
}

message NewCustomerRequest{

}

message CustomerLookupModel{
	int32 userId = 1;
}

message CustomerModel{
	string firstName = 1;
	string lastName = 2;
	string emailAddress = 3;
	bool isAlive = 4;
	int32 age = 5;
	int32 id = 6;
}
